add amountofnamedmacros, internal-only data structures, begin error handling.  does not work
